<resources>
    <string name="app_name">WebMotorHomeApp</string>
    <string name="title_home">Inicio</string>
    <string name="title_search">Buscar</string>
    <string name="title_sell">Vender</string>
    <string name="title_buy">Comprar</string>
    <string name="title_rent">Aluguel</string>
    <string name="title_chat">Conversas</string>
    <string name="title_my_account">Minha conta</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>